<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.OnlineCustomerService">


   <include
       android:id="@+id/toolbar1"
       layout="@layout/generaltoolbar"/>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar1">

        <LinearLayout
            android:id="@+id/onlinell"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/applogo1"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/no_image" />

            <TextView
                android:id="@+id/appname1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:gravity="center_horizontal"
                android:text="@string/onlinecustomer"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center_horizontal"
                    android:text="@string/ownername"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/ownernametv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center_horizontal"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:text="4444444444444444444444444444444444444444444444444444444444444444444444444444444444444444" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rlcs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/_10dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:srcCompat="@drawable/ic_call" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="@dimen/_10dp"
                                android:gravity="center"
                                android:text="@string/contact1"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_13sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:gravity="right"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/_50dp"
                                android:layout_marginRight="@dimen/_10dp"
                                app:srcCompat="@drawable/ic_navigate_next_black_24dp" />
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlcs1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/_10dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:srcCompat="@drawable/ic_call" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="@dimen/_10dp"
                                android:gravity="center"
                                android:text="@string/contact2"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_13sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:gravity="right"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/_50dp"
                                android:layout_marginRight="@dimen/_10dp"
                                app:srcCompat="@drawable/ic_navigate_next_black_24dp" />
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlcs2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginLeft="6dp"
                            app:srcCompat="@android:drawable/ic_dialog_email" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/_10dp"
                            android:gravity="center"
                            android:text="@string/email1"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_50dp"
                            android:layout_marginLeft="288dp"
                            app:srcCompat="@drawable/ic_navigate_next_black_24dp" />

                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlcs3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="6dp"
                            app:srcCompat="@android:drawable/ic_dialog_email" />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/_10dp"
                            android:gravity="center"
                            android:text="@string/email2"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_50dp"
                            android:layout_marginLeft="288dp"
                            app:srcCompat="@drawable/ic_navigate_next_black_24dp" />

                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>